--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kifferltd">View on GitHub</a>
 
-          <h1 id="project_title"><span style="color:red">KIFFER</span> Ltd GitHub Pages</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title"><span style="color:red">KIFFER</span> Ltd</h1>
+          <h2 id="project_tagline">the embedded java people</h2>
 
         </header>
     </div>
@@ -27,6 +27,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+      <h3><span style="color:red">KIFFER</span> Ltd on GitHub</h3>
+      <p>So this is our patch on GitHub. Chances are you are looking for Open Mika, in which case you need to be 
+        <a href="open-mika">here</a>.
+      </p>
       </section>
     </div>
 
