Trying to shrink that LTD

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kifferltd">View on GitHub</a>
 
-          <h1 id="project_title"><span style="color:red">KIFFER</span> <small>LTD</small></h1>
+          <h1 id="project_title"><span style="color:red">KIFFER</span> <span style="font-size:-1">LTD</span></h1>
           <h2 id="project_tagline">the embedded java people</h2>
 
         </header>
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-      <h3><span style="color:red">KIFFER</span> <small>LTD</small> on GitHub</h3>
+      <h3><span style="color:red">KIFFER</span> <span style="font-size:-1">LTD</span> on GitHub</h3>
       <p>So this is our patch on GitHub. Chances are you are looking for Open Mika, in which case you need to be 
         <a href="open-mika">here</a>.
       </p>
